--- a/index.html
+++ b/index.html
@@ -365,9 +365,9 @@
             /* border-left: 1px solid var(--line-color-light); */
         }
 
-        body.dark-mode .photo-grid {
-            /* border-color: var(--line-color-dark); */
-        }
+        /* body.dark-mode .photo-grid {
+            border-color: var(--line-color-dark);
+        } */
 
         .photo-item {
             padding: 0;
