--- a/notes/index.html
+++ b/notes/index.html
@@ -407,7 +407,7 @@
                 </div>
                 <div class="note-box" data-pdf="/notes/pdfs/linalg.pdf" data-title="Linear Algebra">
                     <h3 class="note-title">Linear Algebra</h3>
-                    <p class="note-description">Matrices, determinants, and transformations.</p>
+                    <p class="note-description">Matrices, transformations, determinants, eigenvalues.</p>
                     <div class="note-pages">(unfinished) Pages: 24</div>
                 </div>
                 <div class="note-box" data-pdf="/notes/pdfs/diffeq.pdf" data-title="Differential Equations">
