--- a/projects/inprogress.html
+++ b/projects/inprogress.html
@@ -318,11 +318,11 @@
         <a href="/notes/">NOTES</a>
     </nav>
 
-    <nav class="table-of-contents">
+    <!-- <nav class="table-of-contents">
         <ul class="toc-list">
             <li><a href="#construction">Under Construction</a></li>
         </ul>
-    </nav>
+    </nav> -->
 
     <main>
         <header class="project-header">
