--- a/projects/personal-misc.html
+++ b/projects/personal-misc.html
@@ -377,7 +377,7 @@
             </div>
         
             <div class="project-card">
-                <img src="/api/placeholder/400/320" alt="filler" class="project-image">
+                <img src="/projects/images/misc/windupcar.png" alt="filler" class="project-image">
                 <div class="project-info">
                     <div class="project-name-container">
                         <h2 class="project-name">Wind Up Car</h2>
@@ -423,7 +423,7 @@
             </div>
         
             <div class="project-card">
-                <img src="/api/placeholder/400/320" alt="filler" class="project-image">
+                <img src="/projects/images/misc/pointcloudmodeling.png" alt="filler" class="project-image">
                 <div class="project-info">
                     <div class="project-name-container">
                         <h2 class="project-name">Point Cloud Modeling</h2>
