--- a/projects/personal-pw.html
+++ b/projects/personal-pw.html
@@ -358,7 +358,7 @@
             <li><a href="#problem">Description</a></li>
             <li><a href="#work">My Work</a></li>
             <li><a href="#results">Results</a></li>
-            <li><a href="#lessons">Lessons Learned</a></li>
+            <!-- <li><a href="#lessons">Lessons Learned</a></li> -->
         </ul>
     </nav>
 
@@ -412,7 +412,7 @@
             </div>
         </section>
 
-        <section id="lessons" class="content-section">
+        <!-- <section id="lessons" class="content-section">
             <h2 class="section-title">Lessons Learned</h2>
             <div class="section-content">
                 <p>This project provided valuable insights into:</p>
@@ -424,7 +424,7 @@
                     <li>Responsive design principles and implementation</li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <script>
