--- a/projects/personal-egk.html
+++ b/projects/personal-egk.html
@@ -140,7 +140,7 @@
             border-bottom: 1px solid var(--line-color-light);
             font-weight: normal;
         }
-/* i love my pigoo*/
+
         body.dark-mode .toc-title {
             border-bottom-color: var(--line-color-dark);
         }
@@ -190,12 +190,39 @@
             line-height: 1.6;
         }
 
-        .section-content ul {
-            padding-left: 20px;
+        .image-grid {
+            display: flex;
+            gap: 8px;
+            margin-top: 20px;
+            width: 100%;
+            justify-content: space-between;
         }
 
-        .section-content li {
-            margin-bottom: 8px;
+        .image-column {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .image-container {
+            width: 100%;
+            border: 1px solid var(--text-color-light);
+            transition: border-color 0.3s ease, transform 0.2s ease;
+        }
+
+        body.dark-mode .image-container {
+            border-color: var(--text-color-dark);
+        }
+
+        .image-container:hover {
+            transform: scale(1.02);
+        }
+
+        .image-container img {
+            width: 100%;
+            height: auto;
+            display: block;
         }
 
         .sidenav {
@@ -275,6 +302,10 @@
             color: var(--text-color-dark);
         }
 
+        ul {
+            padding-left: 20px;
+        }
+
         @media screen and (max-width: 768px) {
             body {
                 padding: 15px;
@@ -282,12 +313,20 @@
                 padding-bottom: 80px;
             }
 
+            .image-grid {
+                flex-direction: column;
+            }
+
+            .image-column {
+                width: 100%;
+            }
+
             .back-button {
                 left: 30px;
                 position: fixed;
-                /* display: inline-flex; */
                 margin-bottom: 20px;
             }
+
             .project-header {
                 padding-top: 10px;
             }
@@ -330,6 +369,7 @@
             }
         }
     </style>
+    <base href="images/egk/" />
 </head>
 <body>
     <a href="/projects/" class="back-button">
@@ -352,122 +392,174 @@
         <a href="/notes/">NOTES</a>
     </nav>
 
-    <nav class="table-of-contents">
-        <!-- <h2 class="toc-title">Jump To</h2> -->
-        <ul class="toc-list">
-            <li><a href="#problem">Description</a></li>
-            <li><a href="#work">My Work</a></li>
-            <li><a href="#results">Results</a></li>
-            <li><a href="#lessons">Lessons Learned</a></li>
-        </ul>
-    </nav>
-
     <main>
         <header class="project-header">
             <h1 class="project-title">3-Wheeled Electric Go-Kart</h1>
             <div class="skills-section">
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
-                    <span class="skill-tag">Manufacturing</span>
-                    <span class="skill-tag">Team Leadership</span>
+                    <span class="skill-tag">CAD</span>  
+                    <span class="skill-tag">Laser Cutting</span>
+                    <span class="skill-tag">Plasma Cutting</span>
+                    <span class="skill-tag">FDM 3d Printing</span>
+                    <span class="skill-tag">Machine Shop Tools</span>
                     <span class="skill-tag">Cost Optimization</span>
-                    <span class="skill-tag">Design Innovation</span>
                     <span class="skill-tag">Metal Fabrication</span>
                 </div>
             </div>
         </header>
 
         <section id="problem" class="content-section">
-            <h2 class="section-title">Problem Statement</h2>
+            <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p>Leading a team of 4, we needed to design, analyze, and build a three-wheeled electric go-kart capable of reaching speeds between 10-15 mph. The project required innovative solutions to reduce weight and cost while maintaining performance, with a goal of using recycled materials wherever possible to minimize expenses.</p>
-            </div>
+                <p>My group and I decided to make a 3 wheeled electric go kart as a part of an engineering class. We were offered
+                    wheels, the makerspace, 80/20 extrusions, round stock, an electric motor, and a tiny amount of money to make it work. We also
+                    decided to make our go kart pirate ship themed -- which meant it had to be pointy at the front, hence the 3 wheels!
+                </p>
+            </div>            
         </section>
 
-        <section id="work" class="content-section">
-            <h2 class="section-title">My Work</h2>
+        <section id="summary" class="content-section">
+            <h2 class="section-title">Summary</h2>
             <div class="section-content">
-                <p>Led the complete development cycle using various manufacturing processes:</p>
-                <ul>
-                    <li>Designed an innovative single wheel steering system utilizing a bevel gear mechanism, achieving significant weight reduction compared to traditional steering systems</li>
-                    <li>Utilized multiple manufacturing processes including plasma cutting, band saw operation, drill press work, milling, laser cutting, and 3D printing</li>
-                    <li>Sourced and repurposed recycled materials to maintain project budget under $100</li>
-                    <li>Engineered custom components to integrate electric drive system with the chassis</li>
-                    <li>Coordinated team efforts across design, fabrication, and assembly phases</li>
-                </ul>
-                
-                <!-- Image placeholder could go here -->
-                <!-- <img src="path_to_image.jpg" alt="Electric Go-Kart" class="project-image"> -->
-            </div>
+                <p>
+                    We started off with dividing the work between us for different subassemblies, which included the 
+                    <ul>
+                        <li>Chassis</li>
+                        <li>Steering</li>
+                        <li>Drivetrain</li>
+                        <li>Cockpit (Gas/Brake Pedals)</li>
+                        <li>Integration</li>
+                    </ul>
+                </p>
+                <p>
+                    With this division of tasks, we all collaborated on a top assembly and finished our CAD (with over 130 components in the total assembly).
+                </p>
+                <p>
+                    Since we couldn't afford a U-Joint, we used a bevel-gear based system for single wheel steering in the front,
+                    fastened to the chassis with 3d printed parts and fasteners, and a custom plasma cut gusset for concentric alignment.
+                    Our chassis featured 80/20 gussets that were FEA analyzed, and secured together with more plasma cut gussets and fasteners.
+                    Our battery powered 2 BLDC motors, one per rear wheel, which were connected with belts and a determined ratio via the FDM 3D printed 
+                    drivetrain components to the wheels. Our brakes engaged with a bike brake that pressed against the wheels when activated.
+                    We made our chassis as skinny/short as possible, based off the measurement of our shortest friend, to 
+                    ensure weight savings.
+                </p>
+                <p>
+                    Finally, to stay in theme, we had our pedals have a pirate symbol be imprinted on them, our steering wheel be a pirate ship wheel that we CAD-ded,
+                    and our drivetrain components to 'look' like beefy tridents (while passing the testing under max torque).
+                </p>
+                <p>
+                    We had to take special note to make sure that the components we were designing were able to be manufactured/made, or bought cheaply, and when assembling
+                    was possible to be able to be put on. This was a big issue in some chassis components, which we had to re-design -- but in the end,
+                    we got everything on the kart and it worked!
+                </p>
+                <!-- <br>
+                <b>Takeaways</b>
+                <p>This project provided valuable insights into:</p>-->
+            </div> 
         </section>
 
-        <section id="results" class="content-section">
-            <h2 class="section-title">Results</h2>
-            <div class="section-content">
-                <p>The go-kart project achieved several key milestones:</p>
-                <ul>
-                    <li>Successfully achieved target speed range of 10-15 mph</li>
-                    <li>Completed entire project under $100 budget through creative material sourcing</li>
-                    <li>Developed innovative single wheel steering solution with bevel gear mechanism</li>
-                    <li>Achieved significant weight savings compared to competitor designs</li>
-                    <li>Successfully integrated electric drive system with custom chassis</li>
-                </ul>
-            </div>
-        </section>
-
-        <section id="lessons" class="content-section">
-            <h2 class="section-title">Lessons Learned</h2>
-            <div class="section-content">
-                <p>This project provided valuable insights into:</p>
-                <ul>
-                    <li>Creative problem-solving under strict budget constraints</li>
-                    <li>Integration of multiple manufacturing processes in a single project</li>
-                    <li>Importance of material selection and recycling in cost reduction</li>
-                    <li>Team leadership and project coordination skills</li>
-                    <li>Balance between innovation and practicality in design decisions</li>
-                </ul>
+        <section id="images" class="content-section">
+            <h2 class="section-title">Images</h2>
+            <div class="image-grid">
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="egk-cover.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im2.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im12.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im13.png" alt="Image">
+                    </div>
+                </div>
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="im8.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im3.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im4.png" alt="Image">
+                    </div>
+                </div>
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="im5.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im6.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im10.png" alt="Image">
+                    </div>
+                </div>
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="im7.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im9.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im11.png" alt="Image">
+                    </div>
+                </div>
+                <!-- <div class="image-column">
+                    <div class="image-container">
+                        <img src="/api/placeholder/300/250" alt="Image 10">
+                    </div>
+                    <div class="image-container">
+                        <img src="/api/placeholder/300/300" alt="Image 11">
+                    </div>
+                </div> -->
             </div>
         </section>
     </main>
 
+    
     <script>
-      const toggleButton = document.getElementById('theme-toggle');
-        const body = document.body;
-        let cantoggle = true;
-
-        toggleButton.addEventListener('click', () => {
-            toggleButton.classList.add('clicked');
-            setTimeout(() => {
-                toggleButton.classList.remove('clicked');
-            }, 100);
-            setTimeout(() => {
-                toggleButton.classList.remove('hover');
-            }, 160);
-
-            cantoggle = false;
-        });
-
-        toggleButton.addEventListener('mouseover', () => {
-            toggleButton.classList.add('hover');
-
-            if(cantoggle) {
-                body.classList.toggle('dark-mode');
-                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
-            }
-        });
-
-        toggleButton.addEventListener('mouseout', () => {    
-            if(cantoggle) {
-                body.classList.toggle('dark-mode');
-                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
-            }
-
-            setTimeout(() => {
-                toggleButton.classList.remove('hover');
-            }, 100);
-
-            cantoggle = true;
-        });
+        const toggleButton = document.getElementById('theme-toggle');
+          const body = document.body;
+          let cantoggle = true;
+  
+          toggleButton.addEventListener('click', () => {
+              toggleButton.classList.add('clicked');
+              setTimeout(() => {
+                  toggleButton.classList.remove('clicked');
+              }, 100);
+              setTimeout(() => {
+                  toggleButton.classList.remove('hover');
+              }, 160);
+  
+              cantoggle = false;
+          });
+  
+          toggleButton.addEventListener('mouseover', () => {
+              toggleButton.classList.add('hover');
+  
+              if(cantoggle) {
+                  body.classList.toggle('dark-mode');
+                  toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
+              }
+          });
+  
+          toggleButton.addEventListener('mouseout', () => {    
+              if(cantoggle) {
+                  body.classList.toggle('dark-mode');
+                  toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
+              }
+  
+              setTimeout(() => {
+                  toggleButton.classList.remove('hover');
+              }, 100);
+  
+              cantoggle = true;
+          });
     </script>
 </body>
 </html>
