--- a/projects/personal-fdu.html
+++ b/projects/personal-fdu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FILLER | Terry Yu</title>
+    <title>Fingerprint Activated Dorm Door | Terry Yu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Project">
     <style>
@@ -140,7 +140,7 @@
             border-bottom: 1px solid var(--line-color-light);
             font-weight: normal;
         }
-/* i love my pigoo*/
+
         body.dark-mode .toc-title {
             border-bottom-color: var(--line-color-dark);
         }
@@ -190,12 +190,39 @@
             line-height: 1.6;
         }
 
-        .section-content ul {
-            padding-left: 20px;
+        .image-grid {
+            display: flex;
+            gap: 8px;
+            margin-top: 20px;
+            width: 100%;
+            justify-content: space-between;
         }
 
-        .section-content li {
-            margin-bottom: 8px;
+        .image-column {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .image-container {
+            width: 100%;
+            border: 1px solid var(--text-color-light);
+            transition: border-color 0.3s ease, transform 0.2s ease;
+        }
+
+        body.dark-mode .image-container {
+            border-color: var(--text-color-dark);
+        }
+
+        .image-container:hover {
+            transform: scale(1.02);
+        }
+
+        .image-container img {
+            width: 100%;
+            height: auto;
+            display: block;
         }
 
         .sidenav {
@@ -275,6 +302,10 @@
             color: var(--text-color-dark);
         }
 
+        ul {
+            padding-left: 20px;
+        }
+
         @media screen and (max-width: 768px) {
             body {
                 padding: 15px;
@@ -282,12 +313,20 @@
                 padding-bottom: 80px;
             }
 
+            .image-grid {
+                flex-direction: column;
+            }
+
+            .image-column {
+                width: 100%;
+            }
+
             .back-button {
                 left: 30px;
                 position: fixed;
-                /* display: inline-flex; */
                 margin-bottom: 20px;
             }
+
             .project-header {
                 padding-top: 10px;
             }
@@ -330,6 +369,7 @@
             }
         }
     </style>
+    <base href="images/fdu/" />
 </head>
 <body>
     <a href="/projects/" class="back-button">
@@ -352,16 +392,6 @@
         <a href="/notes/">NOTES</a>
     </nav>
 
-    <nav class="table-of-contents">
-        <!-- <h2 class="toc-title">Jump To</h2> -->
-        <ul class="toc-list">
-            <li><a href="#problem">Description</a></li>
-            <li><a href="#work">My Work</a></li>
-            <li><a href="#results">Results</a></li>
-            <li><a href="#lessons">Lessons Learned</a></li>
-        </ul>
-    </nav>
-
     <main>
         <header class="project-header">
             <h1 class="project-title">Fingerprint Door Unlocker</h1>
@@ -370,103 +400,128 @@
                 <div class="skills-list">
                     <span class="skill-tag">Arduino</span>
                     <span class="skill-tag">3D Printing</span>
-                    <span class="skill-tag">CAD Design</span>
+                    <span class="skill-tag">DFM/DFA</span>
+                    <span class="skill-tag">CAD</span>
                     <span class="skill-tag">Mechatronics</span>
-                    <span class="skill-tag">Embedded Systems</span>
                 </div>
             </div>
         </header>
 
         <section id="problem" class="content-section">
-            <h2 class="section-title">Problem Statement</h2>
+            <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p>Living in a dorm means carrying a key card everywhere, which can be inconvenient and time-consuming when trying to enter your room. The traditional key card system requires fumbling through pockets or bags, potentially dropping items, and swiping multiple times if the reader doesn't work on the first try. I wanted to create a more efficient and user-friendly way to unlock my dorm door that would eliminate the need for physical credentials while maintaining security.</p>
-                
-                <img src="/api/placeholder/800/400" alt="Fingerprint Door Unlocker mounted on door" />
-            </div>
+                <p>I kept losing my key card, and since each were $20, I wanted to find a different, better solution 
+                    to unlock my dorm door. 
+                </p>
+            </div>            
         </section>
 
-        <section id="work" class="content-section">
-            <h2 class="section-title">My Work</h2>
+        <section id="summary" class="content-section">
+            <h2 class="section-title">Summary</h2>
             <div class="section-content">
-                <p>I designed and developed a complete door unlocking system that uses fingerprint authentication for secure and convenient access. The project combined hardware design, 3D printing, and Arduino programming to create a practical solution.</p>
-                <ul>
-                    <li>Designed a compact housing that could be mounted on the door without permanent modifications</li>
-                    <li>Implemented a lead screw mechanism for smooth, reliable linear motion to actuate the door handle</li>
-                    <li>Created and 3D printed all structural components to ensure perfect fit with the existing door hardware</li>
-                    <li>Programmed an Arduino to interface with the fingerprint sensor and control the motion system</li>
-                    <li>Developed a power-efficient system that could operate on battery power for extended periods</li>
-                </ul>
-            </div>
+                <p>
+                    I started by getting the specs for my project -- after some measurement, I had to somehow mount 
+                    a contraption that could move my dorm handle 40 degrees, or a linear distance of around 4 inches. Additionally,
+                    it has to turn the door handle with about 1.5 foot pounds of force (very inaccurate maybe?). After 
+                    considering options, I settled on using a old DC motor I found in the junk, and since it supplied a questionable
+                    amount of torque, I would bump that up through a lead screw linear actuation system. The DC motor spins at 
+                    550 RPM, which I calculatd would take < 3 seconds to open the door.
+                </p>
+                <p>
+                    With these initial specifications planned out, I began designing -- I just 3d printed some components, fastened together
+                    with m5/m3 screws. I dug up a bearing, and also bought an L298N motor driver to power the DC motor.  The whole assembly was coded on Arduino, and mounted onto the door with command strips to the 
+                    necessary force rating.
+                </p>
+                <p>
+                    Finally, since this device pushes linearly, but the door handle turns in a circle, I created a end effector that features a claw with a print in place hinge,
+                    where even though the device pushes straight, the claw turns in a circle to follow the door handle and apply force without allowing slipping.
+                </p>
+                <!-- <br>
+                <b>Takeaways</b>
+                <p>This project provided valuable insights into:</p>-->
+            </div> 
         </section>
 
-        <section id="results" class="content-section">
-            <h2 class="section-title">Results</h2>
+        <section id="images" class="content-section">
+            <h2 class="section-title">Images</h2>
             <div class="section-content">
-                <p>The fingerprint door unlocker proved to be a significant improvement over the traditional key card system, providing both convenience and efficiency gains.</p>
-                <ul>
-                    <li>Reduced time required to enter dorm by 50% compared to using a key card</li>
-                    <li>Successfully eliminated the need to carry and manage physical credentials</li>
-                    <li>Created a secure system that only responds to registered fingerprints</li>
-                    <li>Designed a non-permanent installation that doesn't damage door hardware</li>
-                    <li>Implemented a fail-safe mechanism that allows for manual operation if needed</li>
-                </ul>
+                <p>Not able to find many pictures of project working before having to move out :(
+                </p>
             </div>
-        </section>
+            <div class="image-grid">
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="fdu-cover.png" alt="Image 1">
+                    </div>
+                </div>
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="im1.png" alt="Image 4">
+                    </div>
+                </div>
+                <div class="image-column">
+                    <!-- <div class="image-container">
+                        <img src="im3.png" alt="Image 6">
+                    </div> -->
 
-        <section id="lessons" class="content-section">
-            <h2 class="section-title">Lessons Learned</h2>
-            <div class="section-content">
-                <p>This project provided valuable experience in combining mechanical design with electronics and programming to create a practical solution to an everyday problem.</p>
-                <ul>
-                    <li>Learned the importance of designing for reliability in daily-use mechanical systems</li>
-                    <li>Gained experience in optimizing 3D printed parts for strength and durability</li>
-                    <li>Developed skills in integrating biometric sensors with mechanical actuators</li>
-                    <li>Understood the challenges of creating user-friendly security systems</li>
-                    <li>Improved ability to iterate on designs based on real-world testing and feedback</li>
-                </ul>
+                </div>
+                <div class="image-column">
+                    <!-- <div class="image-container">
+                        <img src="im4.png" alt="Image 8">
+                    </div> -->
+
+                </div>
+                <!-- <div class="image-column">
+                    <div class="image-container">
+                        <img src="/api/placeholder/300/250" alt="Image 10">
+                    </div>
+                    <div class="image-container">
+                        <img src="/api/placeholder/300/300" alt="Image 11">
+                    </div>
+                </div> -->
             </div>
         </section>
     </main>
 
+    
     <script>
-      const toggleButton = document.getElementById('theme-toggle');
-        const body = document.body;
-        let cantoggle = true;
-
-        toggleButton.addEventListener('click', () => {
-            toggleButton.classList.add('clicked');
-            setTimeout(() => {
-                toggleButton.classList.remove('clicked');
-            }, 100);
-            setTimeout(() => {
-                toggleButton.classList.remove('hover');
-            }, 160);
-
-            cantoggle = false;
-        });
-
-        toggleButton.addEventListener('mouseover', () => {
-            toggleButton.classList.add('hover');
-
-            if(cantoggle) {
-                body.classList.toggle('dark-mode');
-                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
-            }
-        });
-
-        toggleButton.addEventListener('mouseout', () => {    
-            if(cantoggle) {
-                body.classList.toggle('dark-mode');
-                toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
-            }
-
-            setTimeout(() => {
-                toggleButton.classList.remove('hover');
-            }, 100);
-
-            cantoggle = true;
-        });
+        const toggleButton = document.getElementById('theme-toggle');
+          const body = document.body;
+          let cantoggle = true;
+  
+          toggleButton.addEventListener('click', () => {
+              toggleButton.classList.add('clicked');
+              setTimeout(() => {
+                  toggleButton.classList.remove('clicked');
+              }, 100);
+              setTimeout(() => {
+                  toggleButton.classList.remove('hover');
+              }, 160);
+  
+              cantoggle = false;
+          });
+  
+          toggleButton.addEventListener('mouseover', () => {
+              toggleButton.classList.add('hover');
+  
+              if(cantoggle) {
+                  body.classList.toggle('dark-mode');
+                  toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
+              }
+          });
+  
+          toggleButton.addEventListener('mouseout', () => {    
+              if(cantoggle) {
+                  body.classList.toggle('dark-mode');
+                  toggleButton.textContent = body.classList.contains('dark-mode') ? '🌚' : '🌞';
+              }
+  
+              setTimeout(() => {
+                  toggleButton.classList.remove('hover');
+              }, 100);
+  
+              cantoggle = true;
+          });
     </script>
 </body>
 </html>
